--- a/amazona/frontend/src/index.css
+++ b/amazona/frontend/src/index.css
@@ -77,7 +77,7 @@ main {
   height: 100%;
   position: absolute;
   left: -300px;
-  background-color: #100901;
+  background-color: #232f3e;
   transition: 0.5s;
 }
 .site-container {
